syntax = "proto3";

option csharp_namespace = "Shopper.DeliveryService";

package Shipping;

service ShippingService {
	rpc ConfirmDelivery (ConfirmDeliveryRequest) returns (ConfirmDeliveryReply);
	rpc GetNextLocation (GetNextLocationRequest) returns (stream GetNextLocationReply);
}

message ConfirmDeliveryRequest {
	int32 orderId = 1;
	string sign = 2;
}

message ConfirmDeliveryReply {
	bool isConfirmed = 1;
}


message GetNextLocationRequest {
	int32 driverId = 1;
}

message GetNextLocationReply {
	float latitude = 1;
	float longitude = 2;
	string customer_name = 3;
}